--- a/FrontEnd/public/index.html
+++ b/FrontEnd/public/index.html
@@ -13,6 +13,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,700;1,600&family=Prompt:wght@300&display=swap"
     rel="stylesheet">
+    <link rel="stylesheet" href="./css/font-prompt.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
   <link rel="stylesheet" href="./dialog/style.css">
   <script src="./dialog/index.js"></script>
