--- a/FrontEnd/public/index.html
+++ b/FrontEnd/public/index.html
@@ -13,11 +13,14 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,700;1,600&family=Prompt:wght@300&display=swap"
     rel="stylesheet">
-    <link rel="stylesheet" href="./css/font-prompt.css">
+  <link rel="stylesheet" href="./css/font-prompt.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
   <link rel="stylesheet" href="./dialog/style.css">
   <script src="./dialog/index.js"></script>
-</head> 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+
+  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+</head>
 
 <body>
   <noscript>
